# amazon-eval-search

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  evaluation.py  main.py  pyproject.toml
config/evaluation/: evaluation.yml
evaluators/: ndcg_evaluator.py
ranking/: base_ranker.py  e5_bi_encoder.py  msmarco.py  okapi_bm25.py  random_ranker.py
